--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/ll/public
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SESSION_SECURE_COOKIE=false
+SESSION_SAME_SITE=lax
+SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
