--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "vite": "^7.0.4"
+        "vite": "^7.1.2",
+        "vite-svg-loader": "^5.1.0"
+    },
+    "dependencies": {
+        "lucide-static": "^0.539.0"
     }
 }
