--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.10",
-        "@tailwindcss/vite": "^4.0.0",
-        "autoprefixer": "^10.4.16",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
-        "vite": "^7.1.2",
-        "vite-svg-loader": "^5.1.0"
-    },
-    "dependencies": {
-        "lucide-static": "^0.539.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.4",
+    "laravel-vite-plugin": "^1.0.0",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
+    "vite": "^5.4.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "datatables.net-buttons": "^3.1.2",
+    "datatables.net-buttons-dt": "^3.1.2",
+    "datatables.net-dt": "^2.1.7",
+    "datatables.net-fixedcolumns-dt": "^5.0.4",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.0",
+    "moment": "^2.30.1",
+    "pikaday": "^1.8.2",
+    "toastr": "^2.1.4"
+  },
+  "name": "ll"
 }
