--- a/package.json
+++ b/package.json
@@ -14,23 +14,17 @@
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-<<<<<<< HEAD
-    "vite": "^5.4.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
-=======
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
->>>>>>> a9b74498da5d020f2d5df1ded98aee144772679b
-    "datatables.net-buttons": "^3.1.2",
-    "datatables.net-buttons-dt": "^3.1.2",
-    "datatables.net-dt": "^2.1.7",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "datatables.net": "^2.3.2",
+    "datatables.net-buttons": "^3.2.4",
+    "datatables.net-buttons-dt": "^3.2.4",
+    "datatables.net-dt": "^2.3.2",
     "datatables.net-fixedcolumns-dt": "^5.0.4",
     "jquery": "^3.7.1",
-    "jquery-ui": "^1.14.0",
+    "jquery-ui": "^1.14.1",
     "moment": "^2.30.1",
     "pikaday": "^1.8.2",
     "toastr": "^2.1.4"
